changed brand secondary color

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -80,7 +80,7 @@ $gray-lighter2:         #f4f4f4 !default;
 $gray-lightest:         #f7f7f9 !default;
 
 $brand-primary:         #86bd24 !default;
-$brand-secondary:       #d4021d !default;
+$brand-secondary:       #86bd24 !default;
 
 $brand-success:         #7ED321 !default;
 $brand-info:            #5bc0de !default;
